cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Hola mundo</title>
 </head>
 <body>
-    i love verónica, if  want to try to make er happ for the rest of her life
-    esto
-    es
-    vida
+    por fin terminé este curso
     
     
 </body>
